# file-agent

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
crates/agent/: Cargo.toml
crates/agent/src/: async_job.rs  config.rs  cron.rs  main.rs  manager.rs  task.rs  trigger.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  message.rs  object.rs
crates/server/: Cargo.toml
crates/server/src/: agentdb.rs  config.rs  main.rs  webapi.rs
sample/agent/: config.json
sample/server/: agentdb.json  config.json
