[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

reqwest = { version = "^0.11.13" }
tokio = { version = "1", features = ["full"] }
cron = "0.12.0"
chrono = "0.4.23"
async-trait = "^0.1.61"
bytes = "1"
url = "1.4.0"
clap = { version = "4", features = ["derive"] }
protocol = { path = "../protocol" }
shellexpand = "3.0.0"
dirs = "4.0.0"
