[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

rand = "0.8.5"
aes-gcm = "^0.10.1"
bytes = "1"
bincode = "1.3.3"
sha2 = "0.10"
