[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

tokio = { version = "1", features = ["full"] }
tide = "0.16.0"
bytes = "1"
protocol = { path = "../protocol" }
url = "2.3.1"
clap = { version = "4", features = ["derive"] }
dirs = "4.0.0"
http-types = "2.12.0"
